Fix: Netlify API proxy yapılandırması eklendi - Dokümanlar çalışır hale getirildi

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,9 +4,17 @@
   publish = "build"
 
 [build.environment]
-  REACT_APP_BACKEND_URL = "https://pedizone-api.fly.dev"
+  REACT_APP_BACKEND_URL = ""
   NODE_VERSION = "20"
 
+# API requests should be proxied to backend
+[[redirects]]
+  from = "/api/*"
+  to = "https://pedizone-api.fly.dev/api/:splat"
+  status = 200
+  force = true
+
+# SPA fallback - must be last
 [[redirects]]
   from = "/*"
   to = "/index.html"
